Apply idea code analysis suggestions
(cherry picked from commit 77ee8d5566ad97a73fd234406a0f0bb3a8bd9e2f)